@@ -47,7 +47,6 @@ object Aug2013CfLineSpec {
     "2013-08-29 00:18:48.000",
     "2013-08-29 00:19:17.970",
     "page_view",
-    null, // No event vendor set
     null, // We can't predict the event_id
     "567074",
     "main", // Tracker namespace
@@ -96,7 +95,6 @@ object Aug2013CfLineSpec {
     null, //
     null, //
     null, // Unstructured event fields empty
-    null, //
     null, // Transaction fields empty 
     null, //
     null, //
